--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bhop-bot-ts",
   "version": "1.0.0",
   "description": "Rewrite of Drumman22's bhop bot in TypeScript.",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,8 +11,8 @@
     "url": "git+https://github.com/insyri/bhop-bot-ts.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "insyri",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/insyri/bhop-bot-ts/issues"
   },
