--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bhop-bot-ts",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Rewrite of Drumman22's bhop bot in TypeScript.",
   "main": "src/index.ts",
   "scripts": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/insyri/bhop-bot-ts#readme",
   "dependencies": {
+    "chalk": "^4.1.2",
     "detritus-client": "^0.16.3",
     "dotenv": "^10.0.0",
     "typescript": "^4.4.4"
