--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,13 @@
   "compilerOptions": {
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "incremental": true,
+    "incremental": false, // tsconfig.tsbuildinfo
+    "composite": false, // tsconfig.tsbuildinfo
+    // These don't do anything, nice typescript, really cool.
     "target": "ES2021",
     "module": "commonjs",
     "outDir": "./dist",
     "rootDir": "./src",
-    "composite": true,
     "removeComments": true,
     "strict": true,
     "noUnusedLocals": true,
@@ -17,5 +18,6 @@
     "noUncheckedIndexedAccess": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "declaration": false,
   }
 }
