--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/insyri/bhop-bot-ts#readme",
   "dependencies": {
     "chalk": "^4.1.2",
-    "detritus-client": "^0.16.3
+    "detritus-client": "^0.16.3"
     "dotenv": "^15.0.0",
     "typescript": "^4.5.5"
   },
